# controller/news_controller.go
@@ -1,16 +1,17 @@
 package controller
 
 import (
-	"github.com/gin-gonic/gin"
-	"go-web-mini/service"
-	"go-web-mini/vo"
+    "github.com/gin-gonic/gin"
+    "go-web-mini/vo"
+    "go-web-mini/service"
+
 )
 
 //@description 新闻管理
 //@middleware auth
 //@router /api
 type NewsController struct {
-	newsService service.NewsService
+   newsService service.NewsService
 }
 
 //@description 查询单个新闻
@@ -26,6 +27,7 @@ func (c *NewsController) List(ctx *gin.Context, req *vo.ListNewsRequest) (interf
 	return c.newsService.List(ctx, req)
 }
 
+
 //@description 查询新闻列表
 //@tags News
 // @Security JWT
@@ -39,12 +41,13 @@ func (c *NewsController) GetById(ctx *gin.Context, req *vo.GetNewsRequest) (inte
 	return c.newsService.GetById(ctx, req)
 }
 
+
 //@description 创建新闻
 //@tags News
 // @Security JWT
 // @Accept       json
 // @Produce      json
-//@param req    query  vo.CreateNewsRequest  false "入参req"
+//@param req    body  vo.CreateNewsRequest  false "入参req"
 //@success 200 {object} vo.CreateNewsResponse
 //@middleware auth,transition
 // @router /news [post]
@@ -52,12 +55,13 @@ func (c *NewsController) Create(ctx *gin.Context, req *vo.CreateNewsRequest) (in
 	return c.newsService.Create(ctx, req)
 }
 
+
 //@description 批量删除新闻
 //@tags News
 // @Security JWT
 // @Accept       json
 // @Produce      json
-//@param req    query  vo.DeleteNewsRequest  false  "入参req"
+//@param req    body  vo.DeleteNewsRequest  false  "入参req"
 //@success 200  {object} vo.DeleteNewsResponse
 //@middleware auth,transition
 // @router /news [delete]
@@ -65,15 +69,18 @@ func (c *NewsController) DeleteBatch(ctx *gin.Context, req *vo.DeleteNewsRequest
 	return c.newsService.Delete(ctx, req)
 }
 
+
 //@description 更新新闻
 // @tags News
 // @Security JWT
 // @Accept       json
 // @Produce      json
-//@param req    query  vo.UpdateNewsRequest  false  "入参req"
+//@param req    body  vo.UpdateNewsRequest  false  "入参req"
 //@success 200 {object} vo.UpdateNewsResponse
 //@middleware auth,transition
 // @router /news/:id [put]
 func (c *NewsController) Update(ctx *gin.Context, req *vo.UpdateNewsRequest) (interface{}, error) {
 	return c.newsService.Update(ctx, req)
 }
+
+
